# agent

./: .gitignore  CODE_QUALITY.md  Cargo.toml  README.md  renovate.json
.cargo/: config.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-set-label.yml  poc-agent-build.yml  release.yml
.run/: Agent start.run.xml  Build production.run.xml
config/: default.toml
installer/: README.md
installer/linux/: agent-installer-service-user.sh  agent-installer-session-user.sh  agent-installer.sh  agent-upgrade-service-user.sh  agent-upgrade-session-user.sh  agent-upgrade.sh  openbas-agent-installer.sh
installer/macos/: agent-installer-service-user.sh  agent-installer-session-user.sh  agent-installer.sh  agent-upgrade-service-user.sh  agent-upgrade-session-user.sh  agent-upgrade.sh
installer/windows/: README.md  agent-installer-service-user.nsi  agent-installer-service-user.ps1  agent-installer-session-user.nsi  agent-installer-session-user.ps1  agent-installer.nsi  agent-installer.ps1  agent-upgrade-service-user.ps1  agent-upgrade-session-user.ps1  agent-upgrade.ps1  installer.nsi  license.txt
scripts/: release.py
src/: main.rs
src/api/: manage_jobs.rs  mod.rs  register_agent.rs
src/common/: error_model.rs  mod.rs
src/config/: execution_details.rs  mod.rs  settings.rs
src/process/: agent_cleanup.rs  agent_exec.rs  agent_job.rs  keep_alive.rs  mod.rs
src/tests/: mod.rs
src/tests/api/: client.rs
src/tests/process/: agent_exec_tests.rs  mod.rs
src/windows/: service.rs
