[package]
name = "openbas-agent"
version = "1.7.1"
edition = "2021"

[dependencies]
ureq = { version = "2.1", features = ["tls", "json"] }
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
log = { version = "0.4.21", features = ["kv"] }
hostname = "0.4.0"
network-interface = "2.0.0"
signal-hook = "0.3.17"
base64 = "0.22.1"
mid = "2.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
rolling-file = "0.2.0"
rustls = { version ="0.23.13", features = ["ring"], default-features = false }
rustls-platform-verifier = "0.3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"
windows-service-detector = "0.1.0"
