[package]
name = "openbas-agent"
version = "1.18.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls", "rustls-tls-native-roots", "json"], default-features = false }
config = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = {version = "1.0.140"}
log = { version = "0.4.22", features = ["kv"] }
hostname = "0.4.0"
network-interface = "2.0.0"
mid = "3.0.0"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"
rolling-file = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
windows-service-detector = "0.1.0"

[dev-dependencies]
mockito = "1.7.0"
